maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:12: error: ';' expected but '(' found.
				Droite():
                                      ^